welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:61: error: not found: value faireMotif3
faireMotif3()
^