welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
def peinture() {
  baisseBrosse()
  leveBrosse()
	}
def faireV() {
  avance()
  avance()
  peinture()
  avance()
 	gauche()
  avance()
  peinture()
  recule()
  droite()
  avance()
  peinture()
  avance()
  avance()
  gauche()
}
def avance7() {
  for (i<- 1 to 7) {
    avance()
  }
}

def monte() {
  for (i <- 1 to 21) {
    recule()
  }
gauche()
avance7()
droite()
}

def faireMotif() {
  for (i<- 1 to 4) {
    faireV() }
} 

def avance21() { 
  for (i<- 1 to 21) {
    avance()
	}
}

def faireMotif9 () {
  for (i <- 1 to 9) {
    faireMotif()
    avance7()
  }
}

def montehaut() {
  for (i <- 1 to 3) {
  monte()
  	}
}

override def run() {
faireMotif3()
}